Ignored tests that rely on WattDepot server running locally.